--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost logo" />
+            <img src="./assets/images/cost-management.png" alt="cost " />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
