--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <ul>
+            <ul class="hover">
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
