--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Change the div into nav -->
         <nav>
             <ul class="hover">
                 <li>
@@ -26,7 +27,7 @@
     </header>
 <main>
     <div class="hero"></div>
-    <div class="content">
+    <div class="content"> <!-- Change the div into section -->
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./Assets/images/search-engine-optimization.jpg" alt="digtial marketing image" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -48,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </div>
+    </div> <!-- Change the div into section -->
     <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
